--- a/index.html
+++ b/index.html
@@ -26,7 +26,143 @@
         nhie = [
             'Kissed someone with garlic breath',
             'Gotten drunk before meeting someone because I was nervous',
-            'Beaten Ben at chess'
+            'Beaten Ben at chess',
+            'had sex without wanting to',
+            'had sex with more than one person in the same day',
+            'wanted to fuck the mother / father of a friend',
+            "wanted to fuck a friend's brother / sister",
+            'wanted to hook up with someone present',
+            'had sexual fantasies about someone that I did not consider attractive',
+            'done it without any protection',
+            "cum in someone's mouth/had someone cum in my mouth",
+            "wanted to fuck a friend's boyfriend / girlfriend",
+            'been asked to go slower because I was going too fast',
+            'left someone with blueballs',
+            'been blueballed',
+            'had the typical "lights on / off" discussion',
+            'found a hair in my mouth after doing oral',
+            'cheated',
+            'been cheated on',
+            'doubted my sexual orientation',
+            'had sex with two people of the opposite sex in one night',
+            'had an affair with someone and I immediately regretted it',
+            'had sex out of grief',
+            'had sex out of pity',
+            'fucked my ex',
+            'been caught in the middle of sex',
+            'done it in a public place',
+            'done it in the bed of another person',
+            'done it with more people in the same room',
+            'had a threesome',
+            'had sexual fantasies about having a threesome with my boyfriend / girlfriend and another person',
+            'masturbated with an inanimate object',
+            'hurt myself by masturbating',
+            'been disappointed to hook up / fuck someone with whom I really wanted',
+            'practiced sadomasochism or used related objects',
+            "tried anal but it didn't work out",
+            'hooked up with someone who was at least 5 years older than me',
+            'done anything sexual in college / university',
+            'had a hicky in an unusual place',
+            'tried to get someone drunk to hook up with that person',
+            'watched porn with another person',
+            'recorded myself with someone in bed',
+            'masturbated to a movie that was not pornographic',
+            'done it while being on her/your period',
+            'wanted to hook up with more than 2 people present',
+            'rol played',
+            'hooked up with the boy / girl with whom a friend was trying to hook up',
+            '​swallowed cum',
+            'been turned on at a very inappropriate time',
+            'broken a condom during sex',
+            'spent more than a year without sex',
+            'put a condom with my mouth',
+            'involved food in sex',
+            'done it at a party',
+            'taken / bought the morning after pill',
+            'had phone sex',
+            'had to run to get my clothes because the doorbell had just rung',
+            'stopped hooking up / screwing someone to ask the person their name',
+            "hooked up with a friend's ex",
+            'lied about my sexual experiences to my new partner',
+            'had to teach how to unbutton a bra',
+            'had a sexual fantasy about a teacher',
+            'caught my parents doing it',
+            'taken nude photos of myself',
+            'called someone by a wrong name while we were doing it',
+            'had my ass licked',
+            'done it in the shower',
+            'used the kamasutra to learn new positions in bed',
+            'done it with someone who was a virgin',
+            'lied about being a virgin',
+            'measured my penis',
+            'deleted risky conversations so that my partner would not see',
+            'hooked up with someone who did not seem attractive to me just because I was desperate',
+            'believed that I had contracted a sexually transmitted disease',
+            'faked / exaggerated an orgasm',
+            'had a fuck buddy',
+            'left home without underwear',
+            'hooked up with a foreigner',
+            'felt envy when seeing the genitals of a friend',
+            "masturbated at a friend's house",
+            'given/received a blowjob with a condom',
+            'used ice in bed',
+            'asked to satisfy a fetish of mine but without success',
+            'tried to hide an erection in public without success',
+            'used violence in bed',
+            'farted in front of someone I was hooking up with',
+            "ripped my partner's clothes when taking them off",
+            'tried / wanted a couple to break up',
+            'given/received a tittyfuck',
+            'agreed to do something sexual for money',
+            'put / have more than 3 fingers inside',
+            'done it in a car and accidentally honk the horn',
+            'had someone show me a photo of who Ihooked up with because I did not remember',
+            'shaved my genitals thinking that I was going to get laid without success',
+            'wanted to join two friends who were doing it',
+            'made a list of all the people that I hooked up with',
+            'managed to get involved in a platonic love',
+            'had to use more than 2 condoms in the same round',
+            'done it in all the rooms of a house',
+            'talked to stranger on Omegle',
+            'used online dating apps to hook up',
+            'hooked up with someone present',
+            "hooked up with someone I didn't like",
+            'regretted who I had lost my virginity with',
+            'kissed someone who had just vomited',
+            "dated someone knowing it wasn't going to last long",
+            'flirted with someone to make a person jealous',
+            'slipped while doing it in the shower',
+            'thought of another person while doing it with someone',
+            'used flavored condoms',
+            'finished inside without a condom',
+            'kept the photos of my ex naked after breaking up with him / her',
+            'used pull out as a contraceptive method',
+            'had an affair with someone who had a boyfriend / girlfriend',
+            'friendzone someone after having hooked up with that person',
+            'been happy about something bad that happened to my ex',
+            'done it more than 5 times in a day',
+            'hooked up with someone in my current class',
+            'been denied a kiss',
+            'regretted a tattoo',
+            'fallen asleep during sex',
+            'been caught cheating',
+            'broken up with a boyfriend / girlfriend because sex did not satisfy me',
+            'broken the bed while doing it',
+            'had neighbours complain about too much noise',
+            'done it 3 or more times in a row',
+            'created a false account on any social network to see what an ex was doing without them realizing it',
+            'hooked up with someone with whom I was previously in the friendzone',
+            'pretended to be of another nationality to flirt',
+            'been frustrated because I was not satisfied with sex with a person I loved',
+            'fully or partially obsessed with someone after hooking up with that person once',
+            'been in the friendzone with someone present',
+            'broken up with someone to go out with someone else',
+            'thought that I would marry an ex or current partner',
+            'dreamed that I hooked up with someone and I was disappointed when I woke up',
+            'had the paranoia of being pregnant because my period was late',
+            'been attracted to a family member',
+            'gone into the wrong hole',
+            'kissed a really bad kisser'
         ]
 
         document.getElementById("phrase").innerHTML = nhie[Math.floor(Math.random() * (nhie.length))];;
