--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
             'gone into the wrong hole',
             'kissed a really bad kisser'
         ]
-
+        console.log(nhie.length);
+        console.log(Math.floor(Math.random() * (nhie.length)));
+        console.log(nhie[Math.floor(Math.random() * (nhie.length))]);
         document.getElementById("phrase").innerHTML = nhie[Math.floor(Math.random() * (nhie.length))];;
     }
   </script>
