--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             'gone into the wrong hole',
             'kissed a really bad kisser'
         ]
+        document.getElementById("error").innerHTML = "";
         document.getElementById("phrase").innerHTML = nhie[Math.floor(Math.random() * (nhie.length))];
     }
   
