change font and delete some

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/design.css" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'/>
-    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'/>
     <link rel='icon' href='images/favicon.ico'/>
     <title>Maria's Never Have I ever...</title>
   </head>
@@ -35,50 +35,35 @@
             'Beaten Ben at chess',
             'had sex with more than one person in the same day',
             'wanted to hook up with someone present',
-            'had dreams about someone that I did not consider attractive',
+            'dreamed about hooking up with someone that I did not consider attractive',
             'done it without any protection',
             "wanted to get with a friend's boyfriend / girlfriend",
-            'been asked to go slower because I was going too fast',
             'left someone with blueballs',
             'been blueballed',
             'had the typical "lights on / off" discussion',
             'been cheated on',
-            'doubted my sexual orientation',
             'had an affair with someone and I immediately regretted it',
-            'fucked my ex',
             'been caught in the middle of sex',
             'done it in a public place',
             'done it in the bed of another person',
             'done it with more people in the same room',
-            'had a threesome',
-            'had sexual fantasies about having a threesome with my boyfriend / girlfriend and another person',
-            'masturbated with an inanimate object',
-            'hurt myself by masturbating',
-            'been disappointed to hook up / fuck someone with whom I really wanted',
-            'practiced sadomasochism or used related objects',
-            "tried anal but it didn't work out",
             'hooked up with someone who was at least 5 years older than me',
             'done anything sexual in college / university',
             'had a hicky in an unusual place',
             'tried to get someone drunk to hook up with that person',
-            'watched porn with another person',
             'recorded myself with someone in bed',
-            'masturbated to a movie that was not pornographic',
             'done it while being on her/your period',
             'wanted to hook up with more than 2 people present',
             'rol played',
-            'hooked up with the boy / girl with whom a friend was trying to hook up',
-            '​swallowed cum',
+            'hooked up with the person with whom a friend was trying to hook up',
             'been turned on at a very inappropriate time',
             'broken a condom during sex',
             'spent more than a year without sex',
-            'put a condom with my mouth',
             'involved food in sex',
             'done it at a party',
             'taken / bought the morning after pill',
-            'had phone sex',
             'had to run to get my clothes because the doorbell had just rung',
-            'stopped hooking up / screwing someone to ask the person their name',
+            'stopped hooking up to ask the person their name',
             "hooked up with a friend's ex",
             'lied about my sexual experiences to my new partner',
             'had to teach how to unbutton a bra',
@@ -86,22 +71,17 @@
             'caught my parents doing it',
             'taken nude photos of myself',
             'called someone by a wrong name while we were doing it',
-            'had my ass licked',
             'done it in the shower',
-            'used the kamasutra to learn new positions in bed',
             'done it with someone who was a virgin',
             'lied about being a virgin',
-            'measured my penis',
+            "measured my/someone's penis",
             'deleted risky conversations so that my partner would not see',
             'hooked up with someone who did not seem attractive to me just because I was desperate',
-            'believed that I had contracted a sexually transmitted disease',
+            'believed that I had contracted an STD',
             'faked / exaggerated an orgasm',
-            'had a fuck buddy',
+            'had a friend with benefits',
             'left home without underwear',
             'hooked up with a foreigner',
-            'felt envy when seeing the genitals of a friend',
-            "masturbated at a friend's house",
-            'given/received a blowjob with a condom',
             'used ice in bed',
             'asked to satisfy a fetish of mine but without success',
             'tried to hide an erection in public without success',
@@ -109,13 +89,8 @@
             'farted in front of someone I was hooking up with',
             "ripped my partner's clothes when taking them off",
             'tried / wanted a couple to break up',
-            'given/received a tittyfuck',
-            'agreed to do something sexual for money',
-            'put / have more than 3 fingers inside',
             'done it in a car and accidentally honk the horn',
-            'had someone show me a photo of who Ihooked up with because I did not remember',
-            'shaved my genitals thinking that I was going to get laid without success',
-            'wanted to join two friends who were doing it',
+            'had someone show me a photo of who I hooked up with because I did not remember',
             'made a list of all the people that I hooked up with',
             'managed to get involved in a platonic love',
             'had to use more than 2 condoms in the same round',
@@ -131,14 +106,12 @@
             'slipped while doing it in the shower',
             'thought of another person while doing it with someone',
             'used flavored condoms',
-            'finished inside without a condom',
             'kept the photos of my ex naked after breaking up with him / her',
             'used pull out as a contraceptive method',
             'had an affair with someone who had a boyfriend / girlfriend',
             'friendzone someone after having hooked up with that person',
             'been happy about something bad that happened to my ex',
             'done it more than 5 times in a day',
-            'hooked up with someone in my current class',
             'been denied a kiss',
             'regretted a tattoo',
             'fallen asleep during sex',
