get rid of add your own

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <button onclick="next()">Next</button>
 
     
-    <div class="add-option">
+    <!-- <div class="add-option">
       <p id="error"></p>
       <input type="text" id="option">
       <button onclick="add()">Add your own</button>  
-    </div>
+    </div> -->
     
   </body>
 
