--- a/index.html
+++ b/index.html
@@ -132,7 +132,18 @@
             'had the paranoia of being pregnant because my period was late',
             'been attracted to a family member',
             'gone into the wrong hole',
-            'kissed a really bad kisser'
+            'kissed a really bad kisser',
+            'stood up someone on a date',
+            "dumpled someone because they changed their hairstyle",
+            "not wanted to go out with someone because of their appearance",
+            "ghosted someone",
+            "lied on a dating app",
+            "kissed a friend's sibling",
+            "had a holiday romance",
+            "used someone else's toothbrush",
+            "peed in the shower when there was someone else in it",
+            "dated a friend's ex",
+            "eaten leftover food from another table at a restaurant"
         ]
         document.getElementById("error").innerHTML = "";
         document.getElementById("phrase").innerHTML = nhie[Math.floor(Math.random() * (nhie.length))];
