--- a/index.html
+++ b/index.html
@@ -132,7 +132,23 @@
             "used someone else's toothbrush",
             "peed in the shower when there was someone else in it",
             "dated a friend's ex",
-            "eaten leftover food from another table at a restaurant"
+            "eaten leftover food from another table at a restaurant",
+            "(seriously) punched someone",
+            "Been arrested….. twice",
+            "Wet the bed in the past year",
+            "Had sex on public transport",
+            "cried during an orgasm",
+            "Gotten lost alone in another country",
+            "Wanted to live the life of a Kardashian",
+            "Slept outdoors the entire night (no tent/shelter)",
+            "Iron my clothes and hopefully never will",
+            "Stolen food from my housemate, never told him/her and plan to continue doing so",
+            "Bitten my foot nails",
+            "Worked from home on a friday",
+            "Taken more than 5 different substances in a night",
+            "Gotten high with your parents",
+            "Made out with more than 3 people in one night",
+            
         ]
         document.getElementById("phrase").innerHTML = nhie[Math.floor(Math.random() * (nhie.length))];
     }
