--- a/index.html
+++ b/index.html
@@ -148,7 +148,15 @@
             "Taken more than 5 different substances in a night",
             "Gotten high with your parents",
             "Made out with more than 3 people in one night",
-            
+            "Touched a maggot",
+            "Peed in glass to avoid loosing my spot in a festival",
+            "made someone eat a jizzy biccie",
+            "tasted my own pee",
+            "farted on the first date",
+            "Had the wet lung from vape",
+            "puked on someone’s shoes",
+            "Worked with neural networks",
+            "Picked up a one night stand on public transport"
         ]
         document.getElementById("phrase").innerHTML = nhie[Math.floor(Math.random() * (nhie.length))];
     }
